namespace GoldMetrics.GoldCheck.Platform.JewelryInventory.Domain.Model.Commands;

public record GenerateCertificateCommand(string MaterialId);
