namespace GoldMetrics.GoldCheck.Platform.JewelryInventory.Domain.Model.Commands;

public record RegisterMaterialInInventoryCommand(string MaterialId, string QRCode);
