namespace GoldMetrics.GoldCheck.Platform.JewelryInventory.Domain.Model.Commands;

public record RegisterNonCertifiedMaterialCommand(string MaterialId, string JewelerId);
