namespace GoldMetrics.GoldCheck.Platform.JewelryInventory.Domain.Model.Commands;

public record SignCertificateCommand(string CertificateId, string JewelerId);
