namespace GoldMetrics.GoldCheck.Platform.JewelryInventory.Domain.Model.Queries;

public record GetCertificateByIdQuery(string CertificateId);
