namespace GoldMetrics.GoldCheck.Platform.JewelryInventory.Domain.Model.Queries;

public record GetMaterialByIdQuery(string MaterialId);
